[gd_scene load_steps=28 format=1]

[ext_resource path="res://scripts/gameLevel.gd" type="Script" id=1]
[ext_resource path="res://textures/background.png" type="Texture" id=2]
[ext_resource path="res://bricks.tscn" type="PackedScene" id=3]
[ext_resource path="res://walls.tscn" type="PackedScene" id=4]
[ext_resource path="res://bat.tscn" type="PackedScene" id=5]
[ext_resource path="res://powerupTimer.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/ExtraLife.wav" type="Sample" id=7]
[ext_resource path="res://audio/ballHit01.wav" type="Sample" id=8]
[ext_resource path="res://audio/ballOut.wav" type="Sample" id=9]
[ext_resource path="res://audio/brickBreak1.wav" type="Sample" id=10]
[ext_resource path="res://audio/brickBreak2.wav" type="Sample" id=11]
[ext_resource path="res://audio/brickBreak0.wav" type="Sample" id=12]
[ext_resource path="res://audio/brickHit0.wav" type="Sample" id=13]
[ext_resource path="res://audio/hitBall.wav" type="Sample" id=14]
[ext_resource path="res://audio/hitWall.wav" type="Sample" id=15]
[ext_resource path="res://audio/launchBall01.wav" type="Sample" id=16]
[ext_resource path="res://audio/launchBall02.wav" type="Sample" id=17]
[ext_resource path="res://audio/levelStart01.wav" type="Sample" id=18]
[ext_resource path="res://audio/lifeGone.wav" type="Sample" id=19]
[ext_resource path="res://audio/magnetBatHum.wav" type="Sample" id=20]
[ext_resource path="res://audio/powerup01.wav" type="Sample" id=21]
[ext_resource path="res://audio/powerup02.wav" type="Sample" id=22]
[ext_resource path="res://audio/powerupMissed.wav" type="Sample" id=23]
[ext_resource path="res://audio/stoneHit.wav" type="Sample" id=24]
[ext_resource path="res://levelFinished.tscn" type="PackedScene" id=25]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 35, 35 )

[sub_resource type="SampleLibrary" id=2]

samples/ExtraLife = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/ballHit01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/ballOut = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/brickBreak0 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/brickBreak1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/brickBreak2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/brickHit0 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/hitBall = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/hitWall = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/launchBall01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/launchBall02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/levelStart01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}
samples/lifeGone = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/magnetBatHum = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 20 )
}
samples/powerup01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 21 )
}
samples/powerup02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 22 )
}
samples/powerupMissed = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 23 )
}
samples/stoneHit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}

[node name="gameLevel" type="Node2D"]

script/script = ExtResource( 1 )

[node name="SpriteBackground" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="bricks" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 8, 10 )

[node name="walls" parent="." groups=[
"walls",
] instance=ExtResource( 4 )]

z/z = 1000

[node name="bat" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 145.083, 460.042 )

[node name="Area2DTouch" type="Area2D" parent="."]

transform/pos = Vector2( 149.904, 270.363 )
transform/scale = Vector2( 4.70069, 8.44496 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DTouch"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="Position2D" parent="."]

[node name="LabelScore" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 492.0
margin/right = 75.0
margin/bottom = 506.0
text = "Score: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelHighScore" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 513.0
margin/right = 108.0
margin/bottom = 527.0
text = "High Score: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 122.0
margin/top = 515.0
margin/right = -266.0
margin/bottom = -507.0
alignment = 1

[node name="powerupTimer" parent="HUD" instance=ExtResource( 6 )]

margin/left = 10.0
margin/top = 536.0
margin/right = 50.0
margin/bottom = 576.0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 8
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="levelFinished" parent="." instance=ExtResource( 25 )]

visibility/visible = false

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 150, 270 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[connection signal="input_event" from="Area2DTouch" to="." method="_on_Area2DTouch_input_event"]


